--- a/7 mars/exo1/index.html
+++ b/7 mars/exo1/index.html
@@ -5,8 +5,12 @@
     <!--Configurer la page -->
     <head>
 
+    <style> 
+        td {border: 1px dashed black; width: 50px; height: 50px} 
+    </style>
+
         <!--Faire en sorte d'afficher les accents-->
-    <meta charset="UTF-8"> 
+        <meta charset="UTF-8"> 
 
         <!--Ajouter un titre à la page-->
         <title>Bonjour le monde</title>
@@ -47,10 +51,33 @@
         <img src="img/Minion.jpg" alt="Photo d'un minion'">
         <img src="img/Minion.jpg" alt="Photo d'un minion'">
 
+        <!--Tableau-->
+        <table style="border:1px dashed black; border-collapse: collapse"> 
+            <tbody>
+                    <tr>
+                    <td style="border: 1px dashed black; width: 50px; height: 50px">&nbsp;</td>
+                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    <td style="border: 1px dashed black; width: 50px; height: 50px">&nbsp;</td>
+                    </tr>
+
+                    <tr>
+                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    <td style="border: 1px dashed black;width: 50px; height: 50px; text-align: center">Nour</td>
+                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    </tr>
+
+                    <tr>
+                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    </tr>
+            </tbody>
+        </table>
+
         <form action="action_page.php" style="text-align: center;"> 
             <fieldset style="background-image:url('http://www.planwallpaper.com/static/images/Cool-Background-High-Resolution.jpg');
             background-size:100% 100%; ">  
-                <legend>Mike:</legend>
+                <legend>Nour:</legend>
                 <p>Nom:</p>
                 <input type="text" name="firstname">
                 <p>Prénom:</p>
