--- a/7 mars/exo1/index.html
+++ b/7 mars/exo1/index.html
@@ -6,7 +6,16 @@
     <head>
 
     <style> 
-        td {border: 1px dashed black; width: 50px; height: 50px} 
+        ol {
+            background-color: #0000ff}
+        ul {
+            background-color: #ec1620;list-style-type: none}
+        table {
+            border:1px dashed black; border-collapse: collapse}
+        td {
+            border: 1px dashed black; width: 50px; height: 50px} 
+        form {
+            text-align: center}
     </style>
 
         <!--Faire en sorte d'afficher les accents-->
@@ -34,14 +43,14 @@
         <p>Lorem ipsum dolor sit amet, <b>consectetur adipisicing elit</b> Itaque atque perspiciatis quisquam placeat quae reprehenderit optio, inventore cum, voluptates veritatis ratione porro nemo esse incidunt! Consequuntur  <i>ducimus consectetur exercitationem</i> ipsam.</p>
 
         <!-- Liste ordonnée -->
-        <ol style="background-color: #0000ff;">
+        <ol>
             <li>Pierre</li>
             <li>Paul</li>
             <li><i>Jacques</i></li>
         </ol>
 
         <!-- Liste non-ordonnée -->
-        <ul style=" background-color: #ec1620;list-style-type: none;">
+        <ul>
             <li>John</li>
             <li><b>Paul</b></li>
             <li>Georges</li>
@@ -52,29 +61,29 @@
         <img src="img/Minion.jpg" alt="Photo d'un minion'">
 
         <!--Tableau-->
-        <table style="border:1px dashed black; border-collapse: collapse"> 
+        <table> 
             <tbody>
                     <tr>
-                    <td style="border: 1px dashed black; width: 50px; height: 50px">&nbsp;</td>
-                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
-                    <td style="border: 1px dashed black; width: 50px; height: 50px">&nbsp;</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     </tr>
 
                     <tr>
-                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
-                    <td style="border: 1px dashed black;width: 50px; height: 50px; text-align: center">Nour</td>
-                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    <td></td>
+                    <td>Nour</td>
+                    <td></td>
                     </tr>
 
                     <tr>
-                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
-                    <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
+                    <td></td>
+                    <td></td>
                     <td style="border: 1px dashed black;width: 50px; height: 50px">&nbsp;</td>
                     </tr>
             </tbody>
         </table>
 
-        <form action="action_page.php" style="text-align: center;"> 
+        <form action="action_page.php"> 
             <fieldset style="background-image:url('http://www.planwallpaper.com/static/images/Cool-Background-High-Resolution.jpg');
             background-size:100% 100%; ">  
                 <legend>Nour:</legend>
