CSS typo et couleurs

--- a/8 mars/exo 3/index.html
+++ b/8 mars/exo 3/index.html
@@ -46,14 +46,14 @@
         <main>
 
             <!-- Créer une zone -->
-            <section class="redBackground">
-                <h2 id="bigTitle">A propos de <b> Nour Rakotoson</b></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nulla delectus architecto cum, amet vero nihil, fuga. Quam maiores laborum commodi voluptatem amet facere voluptates obcaecati odio, perspiciatis. Doloremque, dolorum.</p>
+            <section>
+                <h2>A propos de <b> Nour Rakotoson</b></h2>
+                <p class="presentation">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui nulla delectus architecto cum, amet vero nihil, fuga. Quam maiores laborum commodi voluptatem amet facere voluptates obcaecati odio, perspiciatis. Doloremque, dolorum.</p>
             </section>
 
             <!-- Créer une zone -->
-            <section>
-                <h2 id="portofolioTitle">Portofolio de <b>Nour Rakotoson</b></h2>
+            <section id="portfolio">
+                <h2>Portofolio de <b>Nour Rakotoson</b></h2>
                 <p>Cliquez sur un des projets ci-dessus</p>
 
                 <!-- Créer 3 sous-section -->
@@ -85,7 +85,7 @@
         </main>
 
         <!-- Fermeture de la page -->
-        <footer class="redBackground" > 
+        <footer> 
             <p>Under MIT Licence</p>
         </footer>
 
