Ajout de la base CSS

--- a/9 mars/index.html
+++ b/9 mars/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>9 Mars - Mon premier site</title>
+
+        <!-- Ajouter la feuille de style CSS -->
+        <link rel="stylesheet" href="CSS/style.css">
+        
     </head>
     <body>
 
@@ -74,6 +78,33 @@
              <section>
 
                 <h2>Contact me</h2>
+
+                <!-- Création d'un formulaire -->
+                <form action="#">
+
+                    <!--Ajouter un champ pour le nom -->
+                    <!-- Placeholder permet d'afficher un message dans le input -->
+                    <input type="text" placeholder="Name"> 
+
+                    <!-- Ajouter un champ pour le email -->
+                    <input type="email" placeholder="Email"> 
+
+                    <!-- Ajouter un champ pour le numéro de téléphone -->
+                    <input type="text" placeholder="Téléphone">
+
+                    <!-- Ajouter un champ pour le message -->
+                    <textarea placeholder="Message"></textarea>
+
+                    <!--
+                        Terminer le formulaire par un input de type submit pour
+                        pouvoir le valider. 
+                        L'attribut value permet de modifier le texte d'un input
+                        de type submit (comme le placeholder pour les autres input).
+                    -->
+                    <input type="submit" value="Send">
+                    
+
+                </form>
 
             </section>
 
