--- a/9 mars/index.html
+++ b/9 mars/index.html
@@ -7,7 +7,7 @@
 
         <!-- Ajouter la feuille de style CSS -->
         <link rel="stylesheet" href="CSS/style.css">
-        
+
     </head>
     <body>
 
@@ -32,41 +32,41 @@
 
         <!-- Le contenu principal de la page -->
         <main>
-            <section>
+            <section id="portfolio">
                 <h2>Portfolio</h2>
                     <article>
-                        <a href="#">Loupe</a></article>
+                        <a href="#">Loupe</a>
                         <img src="img/cabin.png" alt="Cabin">
                     </article>
 
                     <article>
-                        <a href="#">Loupe</a></article>
+                        <a href="#">Loupe</a>
                         <img src="img/cake.png" alt="Cabin">
                     </article>
 
                     <article>
-                        <a href="#">Loupe</a></article>
+                        <a href="#">Loupe</a>
                         <img src="img/circus.png" alt="Cabin">
                     </article>
 
                     <article>
-                        <a href="#">Loupe</a></article>
+                        <a href="#">Loupe</a>
                         <img src="img/game.png" alt="Cabin">
                     </article>
 
                     <article>
-                        <a href="#">Loupe</a></article>
+                        <a href="#">Loupe</a>
                         <img src="img/safe.png" alt="Cabin">
                     </article>
 
                     <article>
-                        <a href="#">Loupe</a></article>
+                        <a href="#">Loupe</a>
                         <img src="img/submarine.png" alt="Cabin">
                     </article>
             </section>
 
 
-            <section>
+            <section id="aboutMe">
 
                 <h2>About</h2>
                     <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization. Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! Download Theme</p>
@@ -75,7 +75,7 @@
             </section>
 
 
-             <section>
+             <section id="contacts">
 
                 <h2>Contact me</h2>
 
@@ -126,7 +126,8 @@
 
             <article>
                 <h3>About freelancer</h3>
-                <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#" target="_blank">Start Bootstrap</a>.</p>
+                <p>Freelance is a free to use, open source Bootstrap theme created by
+                <a href="http://google.com" target="_blank">Start Bootstrap</a>.</p>
             </article>
 
         </section>
@@ -134,8 +135,8 @@
         <!-- Informations qui ne sont pas en rapport direct avec le contenu de la page (ou de la zone) -->
         <aside>Under MIT Licence</aside>
 
-
     </footer>
+
 
     </body>
 </html>
