finalisation de l'exo 3

--- a/10 mars/Exo 4/index.html
+++ b/10 mars/Exo 4/index.html
@@ -18,23 +18,31 @@
             <!-- La navigation principale de la page -->
             <nav>
                 <ul>
-                    <li> <a href="index.html">Start Bootstrap</a></li>
-                    <li> <a href="#portfolio">Portofolio</a></li>
-                    <li> <a href="#aboutMe">About</a></li>
-                    <li> <a href="#contacts">Contact</a></li>
+                    <li> <a href="#">Start Bootstrap</a></li>
+                    <li> <a href="#">Portofolio</a></li>
+                    <li> <a href="#">About</a></li>
+                    <li> <a href="#">Contact</a></li>
                 </ul>
             </nav>
 
             <img src="img/profile.png" alt="Photo de profil">
+            <img src="img/cabin.png" alt="Cabin">
+
             <h1>Start Bootstrap</h1>
             <p>Web Developer - Graphic Artist - User Experience Designer</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat illo eaque dolorem possimus corporis libero voluptas dolor dolorum perferendis eum eos minima, deserunt cupiditate delectus sit ullam, quos mollitia distinctio!</p>
+            
 
         </header>
 
         <!-- Le contenu principal de la page -->
         <main>
-            <section id="portfolio">
+
+            <a href="#">test</a>
+
+            <section>
                 <h2>Portfolio</h2>
+
                     <article>
                         <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                         <img src="img/cabin.png" alt="Cabin">
@@ -67,7 +75,7 @@
             </section>
 
 
-            <section id="aboutMe">
+            <section>
 
                 <h2>About</h2>
                     <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization. Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
@@ -75,8 +83,9 @@
 
             </section>
 
+            <a href="#">test</a>
 
-             <section id="contacts">
+             <section>
 
                 <h2>Contact me</h2>
 
