Finalisation de la version mobile

--- a/14 mars/index.html
+++ b/14 mars/index.html
@@ -31,7 +31,7 @@
 
             <!-- Rendez vous -->
             <section>
-                <h2>Transporter, connecter, innover : GRTgaz, le trait d’union de toutes nos énergies.</h2>
+                <h2>Transporter, connecter, innover : GRT<span>gaz</span>, le trait d’union de toutes nos énergies.</h2>
 
                 <p>Le transport de gaz par canalisations enterrées est un moyen sûr, économique et discret pour acheminer de grandes quantités d’énergie en respectant les territoires, leurs activités, les paysages et la biodiversité. Avec 32000 km de réseaux souterrains, GRTgaz met ses installations et ses compétences au service du climat et de la transition énergétique des territoires.</p>
 
@@ -41,7 +41,7 @@
             <!-- Programme -->
             <section>
                 <h2>Un programme pour tous les territoires</h2>
-                <a href="#">Découvrez le programme de votre région</a>
+                <a href="#" class="callToAction">Découvrez le programme de votre région</a>
             </section>
 
             <!-- Solutions-->
@@ -67,14 +67,14 @@
                     <figcaption>La mobilité gaz</figcaption>
                 </figure>
 
-                <a href="#">Découvrez le programme de nos tables rondes</a>
+                <a href="#" class="callToAction">Découvrez le programme de nos tables rondes</a>
 
             </section>
 
             <!-- Réponses -->
             <section>
                 <h2>Des réponses techniques aux questions concrètes</h2>
-                <a href="#">Découvrez le programme des ateliers techniques</a>
+                <a href="#" class="callToAction">Découvrez le programme des ateliers techniques</a>
             </section>
 
             <!-- Inscrivez-vous -->
@@ -85,7 +85,7 @@
 
                 <p>Energies renouvelables, mobilité, biodiversité, exploitation et sécurité du réseau : venez découvrir nos projets, nos innovations, et nos engagements au service des territoires et du climat !</p>
 
-                <a href="http://goo.gl/sXUXSM" target="_blank">Inscrivez vous au salon des maires</a>
+                <a href="http://goo.gl/sXUXSM" target="_blank" class="callToAction blue">Inscrivez vous au salon des maires</a>
             </section>
 
             <!-- Vidéo -->
@@ -95,15 +95,19 @@
 
                     <p>L’équipe MicroJoule, du Lycée La Joliverie de Saint-Sébastien (44), a réalisé en juin 2015 l’équivalent de 2 551,8 km/litre avec leur nouveau prototype alimenté au GNC (gaz naturel comprimé) :  1ère participation au GNC et performance la plus écologique (catégorie Moteur à combustion) du Shell Eco-marathon 2015 !</p>
 
-                    <h3>partenaire 2015 de Microjoule</h3>
+                    <h3>GRT<span>gaz</span>Partenaire 2015 de Microjoule</h3>
 
                     <a href="http://goo.gl/sXUXSM" target="_blank">Revivez l’histoire de ce record sur grtgaz.com</a>
                 </article>
+
+                <!-- Balise HTML5 pour afficher une vidéo -->
+                <video src="video/film-microjoule.mp4" autoplay loop></video>
+
             </section>
 
             <!-- Chiffres -->
             <section>
-                <h2>GRTgaz en quelques chiffres</h2>
+                <h2>GRT<span>gaz</span> en quelques chiffres</h2>
 
                 <!-- Utiliser les balises pour les illustrations légendées -->
                 <figure>
