--- a/14 mars/index.html
+++ b/14 mars/index.html
@@ -3,7 +3,10 @@
 
     <head>
         <meta charset="UTF-8">
+
+        <!-- Configurer le responsive -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>14 Mars TP GRTgaz - Site Single Page</title>
         <link rel="stylesheet" href="CSS/style.css">
