TP 21 Mars - Responsive

--- a/21 mars/contacts.html
+++ b/21 mars/contacts.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>TP 21 Mars</title>
+        <title>TP 21 Mars - Contacts</title>
 
         <link rel="stylesheet" href="CSS/style.css">
     </head>
 
-    <body>
+    <body class="portfolioPage">
         <!-- Ouverture du site -->
         <header>
             <h1>Brand New App <span>Made with love, HTML and CSS</span></h1>
@@ -31,9 +31,21 @@
         <!-- Contenu principal -->
         <main>
 
-            <h2>Accueil</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur iste odio itaque quasi consequuntur earum ut explicabo qui hic eveniet perspiciatis laudantium temporibus dolor at asperiores beatae, minus neque perferendis.</p>
+            <h2>Contacts</h2>   
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consectetur ipsam dolorem numquam eum voluptates quidem aspernatur perspiciatis necessitatibus, aperiam accusantium alias pariatur tempore fugiat maiores hic labore, soluta eos?</p>
 
+            <!-- Formulaire -->
+            <form action="contact.php">
+                <input type="text" placeholder="Nom Complet">
+                <input type="email" placeholder="Email">
+                <input type="text" placeholder="Sujet">
+                <textarea placeholder="Message"></textarea>
+
+                <!-- Validation du formulaire -->
+                <input type="submit" value="Envoyer le message">
+            </form>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10504.510723377623!2d2.3343453!3d48.8367032!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb118bc844f2f417a!2sLes+Grands+Voisins!5e0!3m2!1sfr!2sfr!4v1490107678773" allowfullscreen></iframe>
 
         </main>
 
