--- a/Avril/4 avril/Exo 5/index.html
+++ b/Avril/4 avril/Exo 5/index.html
@@ -10,8 +10,8 @@
 
     <body>
         <header>
-            <h1>Accordéons jQuery</h1>
-            <h2>Utilisation de slideToggle et slideUp</h2>
+            <h1>Exo 5: Burger Menu jQuery</h1>
+            <h2>CSS+JS</h2>
         </header>
 
         <nav>
