--- a/Avril/6 avril/Exo 1/index.html
+++ b/Avril/6 avril/Exo 1/index.html
@@ -14,7 +14,7 @@
     <body>
         <!-- Ouverture du site -->
         <header>
-            <h1>Brand New App <span>Made with love, HTML and CSS</span></h1>
+            <h1>Nour Rakotoson <span>Brand New App made with love, HTML, CSS and JavaScript</span></h1>
             <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
     
             <!-- Navigation principale -->
